--- a/views/jelololist.ejs
+++ b/views/jelololist.ejs
@@ -87,11 +87,7 @@
                                     <label for="kepviseloprogram" class="form-label">Programja:</label>
                                     <input type="text" class="form-control" id="kepviseloprogram" name="program" value="<%= jelolo.program %>">
                                     <label for="leiras" class="form-label">Leírás:</label>
-                                    <input type="text" class="form-control" id="leiras" name="leiras" value="<%= jelolo.bemutatkozas %>">
-                                    <!-- <label class="form-check-label" for="parte>">Párt?</label>
-                                    <br>
-                                    <input class="form-check-input" type="checkbox" name="parte" value="<%= jelolo.parte %>" id="parte" >
-                                    <br> -->
+                                    <input type="text" class="form-control" id="leiras" name="leiras" value="<%= jelolo.leiras %>">
                                     <label for="kep" class="form-label">Kép:</label>
                                     <input type="text" class="form-control" id="kep" name="kep" value="<%= jelolo.kep %>">
                                     <input type="hidden" name="ret" value="/jelolo/list" >
@@ -123,10 +119,6 @@
                             <input type="text" class="form-control" id="kepviseloprogram" name="program" >
                             <label for="leiras" class="form-label">Leírás:</label>
                             <input type="text" class="form-control" id="leiras" name="leiras" >
-                            <!-- <label class="form-check-label" for="parte>">Párt:</label>
-                            <br>
-                            <input class="form-check-input" type="checkbox" name="parte" id="parte" >
-                            <br> -->
                             <label for="kep" class="form-label">Kép:</label>
                             <input type="text" class="form-control" id="kep" name="kep" >
                             <input type="hidden" name="ret" value="/jelolo/list">
